--- a/src/main/java/org/proje/gui/Form1.form
+++ b/src/main/java/org/proje/gui/Form1.form
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <form xmlns="http://www.intellij.com/uidesigner/form/" version="1" bind-to-class="org.proje.gui.Form1">
-  <grid id="27dc6" binding="panel1" default-binding="true" layout-manager="GridLayoutManager" row-count="21" column-count="5" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
-    <margin top="0" left="0" bottom="0" right="0"/>
+  <grid id="27dc6" binding="panel1" default-binding="true" layout-manager="GridBagLayout">
     <constraints>
       <xy x="20" y="20" width="1452" height="863"/>
     </constraints>
@@ -13,6 +12,7 @@
           <grid row="5" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false">
             <preferred-size width="65" height="16"/>
           </grid>
+          <gridbag weightx="1.0" weighty="1.0"/>
         </constraints>
         <properties>
           <text value="Aradığınız Öğrenci Özelliğini Seçin:"/>
@@ -23,6 +23,7 @@
           <grid row="9" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false">
             <preferred-size width="65" height="16"/>
           </grid>
+          <gridbag weightx="1.0" weighty="1.0"/>
         </constraints>
         <properties>
           <text value="Aradığınız Ders Özelliğini Seçin:"/>
@@ -33,6 +34,7 @@
           <grid row="13" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false">
             <preferred-size width="65" height="16"/>
           </grid>
+          <gridbag weightx="1.0" weighty="1.0"/>
         </constraints>
         <properties>
           <text value="Aradığınız Gider Özelliğini Seçin:"/>
@@ -43,6 +45,7 @@
           <grid row="5" column="3" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false">
             <preferred-size width="83" height="30"/>
           </grid>
+          <gridbag weightx="1.0" weighty="1.0"/>
         </constraints>
         <properties>
           <model/>
@@ -53,6 +56,7 @@
           <grid row="9" column="3" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false">
             <preferred-size width="83" height="30"/>
           </grid>
+          <gridbag weightx="1.0" weighty="1.0"/>
         </constraints>
         <properties/>
       </component>
@@ -61,6 +65,7 @@
           <grid row="13" column="3" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false">
             <preferred-size width="83" height="30"/>
           </grid>
+          <gridbag weightx="1.0" weighty="1.0"/>
         </constraints>
         <properties/>
       </component>
@@ -69,6 +74,7 @@
           <grid row="17" column="3" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false">
             <preferred-size width="83" height="30"/>
           </grid>
+          <gridbag weightx="1.0" weighty="1.0"/>
         </constraints>
         <properties/>
       </component>
@@ -77,6 +83,7 @@
           <grid row="17" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false">
             <preferred-size width="65" height="16"/>
           </grid>
+          <gridbag weightx="1.0" weighty="1.0"/>
         </constraints>
         <properties>
           <text value="Aradığınız Stok Özelliğini Seçin:"/>
@@ -87,6 +94,7 @@
           <grid row="1" column="4" row-span="2" col-span="1" vsize-policy="0" hsize-policy="4" anchor="9" fill="0" indent="0" use-parent-layout="false">
             <preferred-size width="237" height="16"/>
           </grid>
+          <gridbag weightx="1.0" weighty="1.0"/>
         </constraints>
         <properties>
           <horizontalAlignment value="10"/>
@@ -98,6 +106,7 @@
           <grid row="1" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false">
             <preferred-size width="65" height="16"/>
           </grid>
+          <gridbag weightx="1.0" weighty="1.0"/>
         </constraints>
         <properties>
           <horizontalAlignment value="10"/>
@@ -109,25 +118,18 @@
           <grid row="1" column="3" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false">
             <preferred-size width="83" height="30"/>
           </grid>
+          <gridbag weightx="1.0" weighty="1.0"/>
         </constraints>
         <properties>
           <model/>
         </properties>
       </component>
-      <hspacer id="3242f">
-        <constraints>
-          <grid row="1" column="1" row-span="1" col-span="1" vsize-policy="1" hsize-policy="0" anchor="0" fill="1" indent="0" use-parent-layout="false">
-            <minimum-size width="20" height="-1"/>
-            <preferred-size width="20" height="-1"/>
-            <maximum-size width="20" height="-1"/>
-          </grid>
-        </constraints>
-      </hspacer>
       <component id="e0a36" class="javax.swing.JLabel" binding="studentLabel">
         <constraints>
           <grid row="6" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false">
             <preferred-size width="65" height="16"/>
           </grid>
+          <gridbag weightx="1.0" weighty="1.0"/>
         </constraints>
         <properties>
           <text value="Öğrenci Numarasını Giriniz:"/>
@@ -140,6 +142,7 @@
             <preferred-size width="221" height="30"/>
             <maximum-size width="200" height="-1"/>
           </grid>
+          <gridbag weightx="1.0" weighty="1.0"/>
         </constraints>
         <properties/>
       </component>
@@ -148,6 +151,7 @@
           <grid row="10" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false">
             <preferred-size width="65" height="16"/>
           </grid>
+          <gridbag weightx="1.0" weighty="1.0"/>
         </constraints>
         <properties>
           <text value="Ders Kodunu Giriniz:"/>
@@ -160,19 +164,10 @@
             <preferred-size width="221" height="30"/>
             <maximum-size width="200" height="-1"/>
           </grid>
+          <gridbag weightx="1.0" weighty="1.0"/>
         </constraints>
         <properties/>
       </component>
-      <vspacer id="dbdc5">
-        <constraints>
-          <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="6" hsize-policy="1" anchor="0" fill="2" indent="0" use-parent-layout="false"/>
-        </constraints>
-      </vspacer>
-      <vspacer id="df9e3">
-        <constraints>
-          <grid row="20" column="0" row-span="1" col-span="1" vsize-policy="6" hsize-policy="1" anchor="0" fill="2" indent="0" use-parent-layout="false"/>
-        </constraints>
-      </vspacer>
       <component id="ab502" class="javax.swing.JButton" binding="öğrenciBilgisiButton" default-binding="true">
         <constraints>
           <grid row="5" column="0" row-span="3" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false">
@@ -180,6 +175,7 @@
             <preferred-size width="200" height="30"/>
             <maximum-size width="200" height="-1"/>
           </grid>
+          <gridbag weightx="1.0" weighty="1.0"/>
         </constraints>
         <properties>
           <text value="Öğrenci Bilgisi"/>
@@ -192,6 +188,7 @@
             <preferred-size width="200" height="30"/>
             <maximum-size width="200" height="-1"/>
           </grid>
+          <gridbag weightx="1.0" weighty="1.0"/>
         </constraints>
         <properties>
           <text value="Ders Bilgisi"/>
@@ -202,6 +199,7 @@
           <grid row="14" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false">
             <preferred-size width="65" height="16"/>
           </grid>
+          <gridbag weightx="1.0" weighty="1.0"/>
         </constraints>
         <properties>
           <text value="Gider Numarasını Giriniz:"/>
@@ -214,6 +212,7 @@
             <preferred-size width="221" height="30"/>
             <maximum-size width="200" height="-1"/>
           </grid>
+          <gridbag weightx="1.0" weighty="1.0"/>
         </constraints>
         <properties/>
       </component>
@@ -224,6 +223,7 @@
             <preferred-size width="100" height="-1"/>
             <maximum-size width="100" height="-1"/>
           </grid>
+          <gridbag weightx="1.0" weighty="1.0"/>
         </constraints>
         <properties>
           <text value="Seç"/>
@@ -234,6 +234,7 @@
           <grid row="18" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false">
             <preferred-size width="65" height="16"/>
           </grid>
+          <gridbag weightx="1.0" weighty="1.0"/>
         </constraints>
         <properties>
           <text value="Stok Numarasını Giriniz:"/>
@@ -246,6 +247,7 @@
             <preferred-size width="221" height="30"/>
             <maximum-size width="200" height="-1"/>
           </grid>
+          <gridbag weightx="1.0" weighty="1.0"/>
         </constraints>
         <properties/>
       </component>
@@ -256,6 +258,7 @@
             <preferred-size width="100" height="-1"/>
             <maximum-size width="100" height="-1"/>
           </grid>
+          <gridbag weightx="1.0" weighty="1.0"/>
         </constraints>
         <properties>
           <text value="Seç"/>
@@ -268,6 +271,7 @@
             <preferred-size width="200" height="30"/>
             <maximum-size width="200" height="-1"/>
           </grid>
+          <gridbag weightx="1.0" weighty="1.0"/>
         </constraints>
         <properties>
           <text value="Gider Bilgisi"/>
@@ -280,36 +284,18 @@
             <preferred-size width="200" height="30"/>
             <maximum-size width="200" height="-1"/>
           </grid>
+          <gridbag weightx="1.0" weighty="1.0"/>
         </constraints>
         <properties>
           <text value="Stok Bilgisi"/>
         </properties>
       </component>
-      <vspacer id="a0c60">
-        <constraints>
-          <grid row="4" column="0" row-span="1" col-span="1" vsize-policy="6" hsize-policy="1" anchor="0" fill="2" indent="0" use-parent-layout="false"/>
-        </constraints>
-      </vspacer>
-      <vspacer id="38af0">
-        <constraints>
-          <grid row="8" column="0" row-span="1" col-span="1" vsize-policy="6" hsize-policy="1" anchor="0" fill="2" indent="0" use-parent-layout="false"/>
-        </constraints>
-      </vspacer>
-      <vspacer id="a325c">
-        <constraints>
-          <grid row="12" column="0" row-span="1" col-span="1" vsize-policy="6" hsize-policy="1" anchor="0" fill="2" indent="0" use-parent-layout="false"/>
-        </constraints>
-      </vspacer>
-      <vspacer id="49027">
-        <constraints>
-          <grid row="16" column="0" row-span="1" col-span="1" vsize-policy="6" hsize-policy="1" anchor="0" fill="2" indent="0" use-parent-layout="false"/>
-        </constraints>
-      </vspacer>
       <component id="d4ab4" class="javax.swing.JLabel" binding="personelLabel">
         <constraints>
           <grid row="2" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false">
             <preferred-size width="65" height="16"/>
           </grid>
+          <gridbag weightx="1.0" weighty="1.0"/>
         </constraints>
         <properties>
           <text value="Personel Numarasını Giriniz:"/>
@@ -322,6 +308,7 @@
             <preferred-size width="221" height="30"/>
             <maximum-size width="200" height="-1"/>
           </grid>
+          <gridbag weightx="1.0" weighty="1.0"/>
         </constraints>
         <properties/>
       </component>
@@ -332,6 +319,7 @@
             <preferred-size width="100" height="-1"/>
             <maximum-size width="100" height="-1"/>
           </grid>
+          <gridbag weightx="1.0" weighty="1.0"/>
         </constraints>
         <properties>
           <text value="Seç"/>
@@ -344,6 +332,7 @@
             <preferred-size width="200" height="30"/>
             <maximum-size width="200" height="-1"/>
           </grid>
+          <gridbag weightx="1.0" weighty="1.0"/>
         </constraints>
         <properties>
           <hideActionText value="false"/>
@@ -353,6 +342,7 @@
       <scrollpane id="d7c89">
         <constraints>
           <grid row="3" column="4" row-span="18" col-span="1" vsize-policy="7" hsize-policy="7" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
+          <gridbag weightx="1.0" weighty="1.0"/>
         </constraints>
         <properties/>
         <border type="none"/>
@@ -370,6 +360,7 @@
             <preferred-size width="100" height="-1"/>
             <maximum-size width="100" height="-1"/>
           </grid>
+          <gridbag weightx="1.0" weighty="1.0"/>
         </constraints>
         <properties>
           <text value="Seç"/>
@@ -382,6 +373,7 @@
             <preferred-size width="100" height="-1"/>
             <maximum-size width="100" height="-1"/>
           </grid>
+          <gridbag weightx="1.0" weighty="1.0"/>
         </constraints>
         <properties>
           <text value="Seç"/>
